--- a/contactapp-backend/src/main/resources/application.properties
+++ b/contactapp-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/contactmanager
 spring.datasource.username=root
-spring.datasource.password=Lotw@pure_123
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
